--- a/styles.css
+++ b/styles.css
@@ -175,8 +175,149 @@ footer {
     padding-left: 0px;
 }
 
+/* About Page */
+#investingPageRap {
+    background-color: #00517F;
+    margin: 0px;
+}
+#investingTitle {
+    text-align: center;
+    color: white;
+}
+iframe {
+    border-radius: 10px;
+}
+
+/* Asset List Page */
+
+/* Calculator Page*/
+  #calculatorPage {
+    text-align: center;
+    margin-top: 80px;
+  }
+  form {
+    background: #00517F;
+    margin: 80px 140px 80px 180px;
+    border-radius: 40px;
+    padding: 80px;
+    max-width: 900px;
+  }
+  label {
+      font-size: 24px;
+      font-weight: 700;
+      color: white;
+  }
+  .formTextBundle {
+    max-width: 400px;
+  }
+  .formDescription {
+    color: rgba(110, 204, 229, 1);
+    font-size: 18px;
+    font-weight: 600;
+  }
+.numberInput {
+    float: right;
+    position: relative;
+    top: -80px;
+    height: 35px;
+    min-width: 280px;
+}
+#buttons {
+    text-align: center;
+    padding: 40px;
+}
+.button {
+    text-decoration: none;
+    font-size: 18px;
+    color: #6ECCE5;
+    padding: 15px 40px;
+    border: 3px solid #6ECCE5;
+    position: relative;
+}
+.button::before, .button::after {
+    content: "";
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border: inherit;
+    transition: all .5s;
+}
+.button::before {
+    top: -15px;
+    left: -15px;
+    border-width: 3px 0 0 3px;
+}
+.button::after {
+    bottom: -15px;
+    left: -15px;
+    border-width: 0 3px 3px 0;
+}
+.button:hover::before, .button:hover::after {
+    width: calc(100% + 27px);
+    height: calc(100% + 27px);
+}
+#calculate {
+    margin-right: 30px;
+    color: rgba(224, 109, 16, 1);
+    border: 3px solid rgba(224, 109, 16, 1);
+}
+#reset {
+    margin-left: 10px;
+}
+#answer {
+    color: #00517F;
+    font-size: 24px;
+    padding: 40px 0px;
+    margin: 0px 0px 80px 180px;
+}
+  /* Blog Page */
+  #navOther {
+      background-color: #00517F;
+  }
+  #blogTitle {
+      text-align: center;
+      font-size: 64px;
+      font-weight: 700;
+      color: #68686A;
+  }
+  #blogFlex {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+  }
+  .blogBlock {
+      height: 544px;
+      width: 432px;
+      margin: 60px 10px 60px 30px;
+      border: 2px solid rgba(109, 109, 109, .55);
+      box-shadow: 2px 3px 6px rgba(109, 109, 109, 0.8);
+      padding: 0px 20px;
+  }
+  .blogCover {
+      height: 280px;
+      width: 432px;
+  }
+  h5 {
+     font-size: 18px;
+     font-weight: 700; 
+     margin: 40px 25px 0px 25px;
+  }
+  .blogDescription {
+      color: #6D6D6D;
+      font-size: 18px;
+      font-weight: 600;
+      margin: 10px 25px;
+  }
+  .author, .dateWritten {
+      display: inline;
+      color: rgba(109, 109, 109, 0.55);
+      font-size: 16px;
+      font-weight: 600;
+      margin: 0px 25px;
+  }
+
 /* Responsiveness */
-@media (max-width: 600px) {
+@media (max-width: 480px) { 
     body {
         margin: 0px;
     }
@@ -192,7 +333,12 @@ footer {
      }
 }
 
-@media (max-width: 992px) {
+@media (max-width: 768px){
+
+}
+
+
+@media (max-width: 1024px) {
     body {
         margin: 0px;
     }
@@ -241,139 +387,10 @@ footer {
      } 
   }
 
-/* About Page */
-#investingPageRap {
-    background-color: #00517F;
-    margin: 0px;
-}
-#investingTitle {
-    text-align: center;
-    color: white;
-}
-iframe {
-    border-radius: 10px;
-}
+  @media (max-width: 1200px){ //or 1280??? 480px, 768px, 1024px, and 1280px).
 
+  }
 
+  @media (min-width: 1201px){
 
-/* Asset List Page */
-
-/* Calculator Page*/
-  #calculatorPage {
-    text-align: center;
-    margin-top: 80px;
-  }
-  form {
-    background: #00517F;
-    margin: 80px 140px 300px 140px;
-    border-radius: 40px;
-    padding: 80px;
-  }
-  label {
-      font-size: 20px;
-      font-weight: 700;
-      color: white;
-  }
-  .formTextBundle {
-    max-width: 400px;
-  }
-  .formDescription {
-    color: rgba(110, 204, 229, 1);
-    font-size: 16px;
-    font-weight: 600;
-  }
-.numberInput {
-    float: right;
-    position: relative;
-    top: -80px;
-    height: 35px;
-    width: 220px;
-}
-#buttons {
-    text-align: center;
-    padding: 40px;
-}
-.button {
-    text-decoration: none;
-    font-size: 18px;
-    color: #6ECCE5;
-    padding: 15px 40px;
-    border: 3px solid #6ECCE5;
-    position: relative;
-}
-.button::before, .button::after {
-    content: "";
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    border: inherit;
-    transition: all .5s;
-}
-.button::before {
-    top: -15px;
-    left: -15px;
-    border-width: 3px 0 0 3px;
-}
-.button::after {
-    bottom: -15px;
-    left: -15px;
-    border-width: 0 3px 3px 0;
-}
-.button:hover::before, .button:hover::after {
-    width: calc(100% + 27px);
-    height: calc(100% + 27px);
-}
-#calculate {
-    margin-right: 30px;
-    color: rgba(224, 109, 16, 1);
-    border: 3px solid rgba(224, 109, 16, 1);
-}
-#reset {
-    margin-left: 10px;
-}
-#answer {
-    color: #00517F;
-}
-  /* Blog Page */
-  #navOther {
-      background-color: #00517F;
-  }
-  #blogTitle {
-      text-align: center;
-      font-size: 64px;
-      font-weight: 700;
-      color: #68686A;
-  }
-  #blogFlex {
-      display: flex;
-      flex-wrap: wrap;
-  }
-  .blogBlock {
-      height: 544px;
-      width: 432px;
-      margin: 60px 10px 60px 60px ;
-      border: 2px solid rgba(109, 109, 109, .55);
-      box-shadow: 2px 3px 6px rgba(109, 109, 109, 0.8);
-  }
-  .blogCover {
-      height: 280px;
-      width: 432px;
-  }
-  h5 {
-     font-size: 18px;
-     font-weight: 700; 
-     margin: 40px 25px 0px 25px;
-  }
-  .blogDescription {
-      color: #6D6D6D;
-      font-size: 18px;
-      font-weight: 600;
-      margin: 10px 25px;
-  }
-  .author, .dateWritten {
-      display: inline;
-      color: rgba(109, 109, 109, 0.55);
-      font-size: 16px;
-      font-weight: 600;
-      margin: 0px 25px;
   }
