--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ a {
     font-size: 18px;
     color: white;
     text-decoration: none;
-    padding: 15px;
+    padding: 15px 0px;
 }
 h1 {
     font-size: 72px;
@@ -42,6 +42,9 @@ img {
 nav {
     padding: 30px 90px 30px 30px;
     text-align: right;
+}
+.link{
+    padding: 15px;
 }
 .link:hover{
     color: #181E34;
@@ -74,6 +77,7 @@ nav {
     background-position: left;
     color: #FEEDEB;
 }
+
 
 /* Hero section*/
 header {
@@ -127,7 +131,7 @@ header {
 }
 #percentagesChart{
     position: relative;
-    left: -110px;
+    left: -90px;
     padding-top: 80px;
 }
 
@@ -206,9 +210,90 @@ footer {
 #investingTitle {
     text-align: center;
     color: white;
+    margin: 0px;
+    padding: 80px 0px;
 }
 iframe {
     border-radius: 10px;
+    min-width: 850px;
+    max-width: 1040px;
+    min-height: 600px;
+    max-height: 680;
+    position: relative;
+    left: -200px;
+}
+#videoSection{
+    background-color: #276C93;
+    margin-left: 600px;
+   padding: 20px 0px;
+   border-radius: 10px;
+   margin-bottom: 100px;
+}
+#optionSection{
+    background-color: #FFF;
+
+}
+#indexTitle{
+    text-align: center;
+    margin: 80px 0px;
+    padding: 60px 0px;
+    color: #00517F;
+}
+.choiceBlocks{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 70px;
+}
+.choiceBlocks:hover{
+    transform: scale(1.03);
+    transition: ease-in-out .5s;
+    cursor: pointer
+}
+.choiceBlocks {
+  transform: scale(1);
+  transition: all 1s ease;
+}
+.choiceBlock{
+    max-width: 440px;
+    padding: 500px;
+}
+#etfBlock{
+    display: inline-block;
+    background-color: #00517F;
+    border-radius: 10px;
+    padding: 20px;
+    margin-bottom: 60px;
+}
+#indexFundBlock{
+    display: inline-block;
+    background-color: #00517F;
+    border-radius: 10px;
+    padding: 20px;
+    margin-bottom: 60px;
+}
+.blockImage{
+    max-width: 395px;
+    max-height: 349px;
+}
+.blockDescription{
+    color: #FFF;
+    text-align: center;
+    font-size: 26px;
+}
+#appearsEtf{
+    padding: 40px 0px;
+}
+#appearsIndex{
+    padding: 40px 0px;
+}
+#lastSection{
+    background-color: #FFF;
+    padding-top: 30px;
+}
+h4{
+    font-size: 18px;
+    color: #6ECCE5;
 }
 
 /* Asset List Page */
@@ -237,7 +322,7 @@ select {
 }
 .assetBlock{
     min-width: 300px;
-    max-width: 390px;
+    max-width: 320px;
     max-height: 300px;
     background-color: rgba(39, 108, 147, 1);
     border-radius: 20px;
@@ -247,6 +332,7 @@ select {
 }
 .assetBlockTitle {
     margin: 40px 25px 0px 0px;
+    font-size: 20px;
 }
 .assetType {
     width: 100px;
@@ -260,10 +346,11 @@ select {
     text-align: center;
 }
 .typeFigure {
-    margin-bottom: 5px;
+    margin-top: 5px;
 }
 .inlineFlex {
     display: inline-flex;
+    align-items: center;
     margin: 40px 0px;
 }
 
@@ -371,14 +458,26 @@ select {
       box-shadow: 2px 3px 6px rgba(109, 109, 109, 0.8);
       padding: 0px;
   }
+  .blogLink {
+      padding: 0px;
+  }
+  .blogBlock:hover {
+    transform: scale(1.03);
+    transition: ease-in-out .5s;
+  }
+  .blogBlock {
+    transform: scale(1);
+    transition: all 1s ease;
+  }
   .blogCover {
-      height: 280px;
+      min-height: 280px;
       width: auto;
   }
   h5 {
      font-size: 18px;
      font-weight: 700; 
      margin: 40px 25px 0px 25px;
+     color: #181E34;
   }
   .blogDescription {
       color: #6D6D6D;
@@ -537,6 +636,7 @@ select {
      }
      #allocation {
          padding-bottom: 80px;
+         
      }
      #checkingPhone {
          display: none;
